--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Train Control Dashboard – 2 Trains</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
     <header>
@@ -14,7 +14,12 @@
 
     <div class="map-section">
       <div class="map-box" id="mapBox">
-        <img src="map.jpg" alt="Static Map" class="map-image" id="map" />
+        <img
+          src="resources/map.jpg"
+          alt="Static Map"
+          class="map-image"
+          id="map"
+        />
 
         <div class="train" id="train1">
           🚆
@@ -116,6 +121,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
